<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (c) 2016, M. Wensveen (mwensveen.nl) All rights reserved. 
     This program and the accompanying materials are made available under the 
     terms of the Eclipse Public License v1.0 which accompanies this distribution, 
     and is available at http://www.eclipse.org/legal/epl-v10.html -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   
   <groupId>nl.mwensveen.buildergenerator</groupId>
   <artifactId>nl.mwensveen.eclipse.plugins.bg-project</artifactId>
   <version>4.4.2-SNAPSHOT</version>
   <packaging>pom</packaging>

   <name>Builder Generator - Project</name>

   <description>Eclipse plugin for generating code for the Builder</description>

   <properties>
      <tycho.version>4.0.6</tycho.version>
      <target.platform.classifier>Eclipse-2024-03</target.platform.classifier>
      <target.platform.url>http://download.eclipse.org/releases/2023-12</target.platform.url>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>

   <modules>
      <module>platform</module>
      <module>plugin</module>
      <module>feature</module>
      <module>repo</module>
   </modules>


   <build>
      <pluginManagement>
         <plugins>
            <plugin>
               <!-- The Tycho Maven Plugin provides extensions to build
					Eclipse projects. -->
               <groupId>org.eclipse.tycho</groupId>
               <artifactId>tycho-maven-plugin</artifactId>
               <version>${tycho.version}</version>
            </plugin>
            <plugin>
               <!-- Compiles application sources with eclipse plugin
					dependencies -->
               <groupId>org.eclipse.tycho</groupId>
               <artifactId>tycho-compiler-plugin</artifactId>
               <version>${tycho.version}</version>
               <configuration>
                  <source>17</source>
                  <target>17</target>
               </configuration>
            </plugin>
            <plugin>
               <!-- Configures the target-platform to use in order to
					resolve dependencies. This mojo is actually not executable,
					and is only meant to host configuration-->
               <groupId>org.eclipse.tycho</groupId>
               <artifactId>target-platform-configuration</artifactId>
               <version>${tycho.version}</version>
               <configuration>
                  <target>
                     <file>
                        ${basedir}/../platform/${target.platform.classifier}.target</file>
                  </target>
                  <environments>
                     <environment>
                        <os>linux</os>
                        <ws>gtk</ws>
                        <arch>x86_64</arch>
                     </environment>
                     <environment>
                        <os>win32</os>
                        <ws>win32</ws>
                        <arch>x86_64</arch>
                     </environment>
                     <environment>
                        <os>macosx</os>
                        <ws>cocoa</ws>
                        <arch>x86_64</arch>
                     </environment>
                  </environments>
               </configuration>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
               <version>3.2.5</version>
            </plugin>
            <plugin>
               <!-- Executes tests in an OSGi runtime. This is only
					supported in modules of packaging type
					`eclipse-test-plugin`. -->
               <groupId>org.eclipse.tycho</groupId>
               <artifactId>tycho-surefire-plugin</artifactId>
               <version>${tycho.version}</version>
               <configuration>
                  <useUIHarness>${tests.use.ui}</useUIHarness>
                  <useUIThread>${tests.use.ui}</useUIThread>
                  <showEclipseLog>true</showEclipseLog>
                  <skipAfterFailureCount>10</skipAfterFailureCount>
                  <providerHint>junit4</providerHint>
                  <argLine>
                     --add-opens java.base/java.lang=ALL-UNNAMED
                  </argLine>
               </configuration>
            </plugin>
            <plugin>
               <!-- Creates archives with the product installations. -->
               <groupId>org.eclipse.tycho</groupId>
               <artifactId>tycho-p2-director-plugin</artifactId>
               <version>${tycho.version}</version>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-assembly-plugin</artifactId>
               <version>3.6.0</version>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-deploy-plugin</artifactId>
               <version>3.1.1</version>
            </plugin>
            <plugin>
               <groupId>org.eclipse.tycho</groupId>
               <artifactId>tycho-packaging-plugin</artifactId>
               <version>${tycho.version}</version>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-antrun-plugin</artifactId>
               <version>3.1.0</version>
            </plugin>
         </plugins>
      </pluginManagement>
      <plugins>
         <plugin>
            <groupId>org.eclipse.tycho</groupId>
            <artifactId>tycho-maven-plugin</artifactId>
            <extensions>true</extensions>
         </plugin>
         <plugin>
            <groupId>org.eclipse.tycho</groupId>
            <artifactId>tycho-compiler-plugin</artifactId>
         </plugin>
         <plugin>
            <groupId>org.eclipse.tycho</groupId>
            <artifactId>target-platform-configuration</artifactId>
         </plugin>
         <plugin>
            <groupId>org.eclipse.tycho</groupId>
            <artifactId>tycho-surefire-plugin</artifactId>
         </plugin>
         <plugin>
            <artifactId>maven-deploy-plugin</artifactId>
            <executions>
               <!-- Deactivates standard Maven "deploy" goal at "deploy"
					phase, that makes no sense for an Eclipse plug-in. -->
               <!-- Our deployment is handled via the
					org.moreunit.updatesite  module -->
               <execution>
                  <id>default-deploy</id>
                  <phase>none</phase>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.eclipse.tycho</groupId>
            <artifactId>tycho-packaging-plugin</artifactId>
            <executions>
               <execution>
                  <!-- avoid warning, a consumer POM is not needed -->
                  <id>default-update-consumer-pom</id>
                  <phase>none</phase>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-antrun-plugin</artifactId>
            <executions>
               <execution>
                  <id>avoid-equinox-exception</id>
                  <goals>
                     <goal>run</goal>
                  </goals>
                  <phase>initialize</phase>
                  <configuration>
                     <target>
                        <echo
                           file="${project.build.directory}/work/configuration/org.eclipse.equinox.simpleconfigurator/bundles.info"
                           message="# empty, just to suppress equinox errors during build" />
                     </target>
                  </configuration>
               </execution>
            </executions>
         </plugin>
      </plugins>

      <defaultGoal>verify</defaultGoal>
   </build>

   <profiles>
      <profile>
         <id>sun-jvm</id>
         <activation>
            <property>
               <name>java.vendor.url</name>
               <value>http://java.sun.com/</value>
            </property>
         </activation>
         <properties>
            <tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
         </properties>
      </profile>
      <profile>
         <id>sign</id>
         <activation>
            <property>
               <name>jarsigner.alias</name>
            </property>
         </activation>
         <build>
            <plugins>
               <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-jarsigner-plugin</artifactId>
                  <version>3.0.0</version>
                  <executions>
                     <execution>
                        <id>sign</id>
                        <goals>
                           <goal>sign</goal>
                        </goals>
                     </execution>
                  </executions>
               </plugin>
            </plugins>
         </build>
      </profile>
   </profiles>
</project>
